--- a/iKota/Base.lproj/Main.storyboard
+++ b/iKota/Base.lproj/Main.storyboard
@@ -44,41 +44,74 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TDL-90-dcR">
-                                                    <rect key="frame" x="14" y="3" width="50" height="50"/>
+                                                    <rect key="frame" x="14" y="4" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="Ea9-vo-pMp"/>
                                                         <constraint firstAttribute="width" constant="50" id="hTP-NT-Gt0"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J9O-Uv-x0Z">
-                                                    <rect key="frame" x="72" y="10" width="520" height="21"/>
+                                                    <rect key="frame" x="72" y="9" width="508" height="21"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="tuning" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3wJ-dC-t5h">
-                                                    <rect key="frame" x="72" y="27" width="520" height="21"/>
+                                                    <rect key="frame" x="72" y="31" width="458" height="15"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="4" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="▶︎" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tln-ls-GhY">
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="17" id="HkJ-he-XXP"/>
+                                                        <constraint firstAttribute="height" constant="21" id="J1v-wt-NVk"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EcB-Z8-wFL">
+                                                    <rect key="frame" x="563" y="28" width="37" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="aZO-Fg-Isg"/>
+                                                        <constraint firstAttribute="width" constant="37" id="pCG-SA-G38"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="TDL-90-dcR" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" id="6FF-Z1-nrY"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="J9O-Uv-x0Z" secondAttribute="trailing" constant="20" id="BHK-pC-4ye"/>
+                                                <constraint firstItem="EcB-Z8-wFL" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" constant="19" id="Dxz-De-WIB"/>
                                                 <constraint firstItem="TDL-90-dcR" firstAttribute="leading" secondItem="y5k-rN-JE5" secondAttribute="leadingMargin" id="FfD-gM-hJh"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="3wJ-dC-t5h" secondAttribute="trailing" constant="70" id="Jqw-hK-zKh"/>
                                                 <constraint firstAttribute="centerY" secondItem="TDL-90-dcR" secondAttribute="centerY" id="M0U-er-yBL"/>
+                                                <constraint firstItem="EcB-Z8-wFL" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" id="QgD-QB-kF3"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="J9O-Uv-x0Z" secondAttribute="trailing" constant="70" id="bNh-J7-ZR3"/>
                                                 <constraint firstItem="3wJ-dC-t5h" firstAttribute="leading" secondItem="TDL-90-dcR" secondAttribute="trailing" constant="8" id="cx7-pf-NmB"/>
                                                 <constraint firstItem="TDL-90-dcR" firstAttribute="leading" secondItem="y5k-rN-JE5" secondAttribute="leadingMargin" constant="6" id="fBH-gf-jOs"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="EcB-Z8-wFL" secondAttribute="bottom" constant="-3" id="hmR-Zb-xUi"/>
                                                 <constraint firstItem="J9O-Uv-x0Z" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" id="iyM-HW-Nht"/>
-                                                <constraint firstItem="3wJ-dC-t5h" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" id="r7r-Zw-N6l"/>
+                                                <constraint firstItem="tln-ls-GhY" firstAttribute="leading" secondItem="J9O-Uv-x0Z" secondAttribute="trailing" constant="8" id="kQ3-Nu-RPE"/>
+                                                <constraint firstItem="tln-ls-GhY" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" id="lXP-l0-Ftd"/>
+                                                <constraint firstItem="3wJ-dC-t5h" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" constant="70" id="r7r-Zw-N6l"/>
                                                 <constraint firstItem="3wJ-dC-t5h" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" constant="22" id="sKK-Pg-ZwO"/>
-                                                <constraint firstItem="J9O-Uv-x0Z" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" id="vk6-MN-9ko"/>
+                                                <constraint firstItem="tln-ls-GhY" firstAttribute="top" secondItem="y5k-rN-JE5" secondAttribute="topMargin" id="soz-a8-kx8"/>
+                                                <constraint firstItem="J9O-Uv-x0Z" firstAttribute="trailing" secondItem="y5k-rN-JE5" secondAttribute="trailingMargin" constant="70" id="vk6-MN-9ko"/>
                                                 <constraint firstItem="J9O-Uv-x0Z" firstAttribute="leading" secondItem="TDL-90-dcR" secondAttribute="trailing" constant="8" id="wwa-KT-shR"/>
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
                                                     <exclude reference="6FF-Z1-nrY"/>
                                                     <exclude reference="FfD-gM-hJh"/>
+                                                    <exclude reference="bNh-J7-ZR3"/>
+                                                    <exclude reference="vk6-MN-9ko"/>
+                                                    <exclude reference="r7r-Zw-N6l"/>
+                                                    <exclude reference="hmR-Zb-xUi"/>
+                                                    <exclude reference="kQ3-Nu-RPE"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
@@ -257,7 +290,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mmE-J8-lV2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="685" y="444"/>
+            <point key="canvasLocation" x="685" y="442"/>
         </scene>
         <!--Search-->
         <scene sceneID="aXM-n4-3Gs">
